moved main states and fetchs to app.jsx, wrote visible keyboard logic to correctly move to next line etc

--- a/worlde/src/components/gameArea/row/letter/letter.scss
+++ b/worlde/src/components/gameArea/row/letter/letter.scss
@@ -6,6 +6,8 @@
     width: 45px;
     height: 45px;
     border: 1px solid black;
+    font-size: 35px;
+    text-transform: uppercase;
     &>input{
         display: flex;
         align-items: center;
