--- a/worlde/src/components/keyboard/keyboard.scss
+++ b/worlde/src/components/keyboard/keyboard.scss
@@ -10,7 +10,7 @@
             justify-content: center;
             font-size: 20px;
             margin: 5px;
-            width: 50px;
+            min-width: 50px;
             height: 60px;
             border: 1px solid black;
         }
